Remove unused controllers, services, DTOs, configurations, constants, and tests; streamline codebase by eliminating redundant or outdated functionality.